fixed spacing

--- a/main.css
+++ b/main.css
@@ -32,3 +32,8 @@ section {
     align-items: center;
     flex-direction: column;
 }
+
+p {
+    margin: 0px;
+    padding: 0px;
+}
